--- a/style.css
+++ b/style.css
@@ -82,3 +82,11 @@ code {
     font-size: 0.85rem;
   }
 }
+
+@media screen and (min-width: 800px) {
+  .container {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
