--- a/style.css
+++ b/style.css
@@ -112,3 +112,30 @@ body[data-theme="dark"] pre {
   color: #eee;
   border-left-color: #4fc3f7;
 }
+
+@media print {
+  /* Hide elements not needed in print */
+  button,
+  nav,
+  footer {
+    display: none !important;
+  }
+
+  body {
+    background: #fff !important;
+    color: #000 !important;
+    font-size: 12pt;
+    margin: 1in;
+  }
+
+  pre, code {
+    color: #000 !important;
+    background: #f5f5f5 !important;
+    page-break-inside: avoid;
+  }
+
+  a {
+    color: #000;
+    text-decoration: none;
+  }
+}
